# ERR-MapForGoblins-DLL

./: .gitignore  CMakeLists.txt  GoblinERR.ini  MapForGoblins.ini  README.md  build.bat  check_offsets.cpp  requirements.txt
assets/: README.txt
data/: ItemLotParam_map.csv  PlaceName_engus.json  WorldMapLegacyConvParam.json  WorldMapLegacyConvParam_dlc.json  WorldMapPointParam.csv  WorldMapPointParam.json  _emevd_findings.json  _piece_complete_map.json  _piece_final_map.json  _piece_mappings.json  _piece_models.json  _pieces_diagnostic.json  _rune_pieces_821.json  aeg099_item_mapping.json  aeg463_item_mapping.json  all_gathering_nodes_final.json  all_pieces.json  boss_list.json  comparison_report.json  dungeon_to_world.json  ember_pieces.json  emevd_lot_mapping.json  enemy_tutorial_mapping.json  gathering_node_flags.json  goods_crafting_ids.json  goods_incantation_ids.json  goods_sorcery_ids.json  goods_sort_groups.json  goods_spirit_ash_ids.json  items_database.json  msb_entity_index.json  new_fmg_entries.json  rune_pieces.json  tutorial_title_ids.json  tutorial_title_names.json  valid_location_ids.json
docs/: KNOWLEDGE_EN.md  KNOWLEDGE_RU.md  aeg099_gathering_nodes.md  geom_collection_tracking.md
src/: dllmain.cpp  goblin_collected.cpp  goblin_collected.hpp  goblin_config.cpp  goblin_config.hpp  goblin_inject.cpp  goblin_inject.hpp  goblin_logic.cpp  goblin_logic.hpp  goblin_main.cpp  goblin_main.hpp  goblin_markers.cpp  goblin_markers.hpp  goblin_massedit.cpp  goblin_massedit.hpp  goblin_messages.cpp  goblin_messages.hpp  version.h.in
tools/: README.md  _analyze_821.py  _build_location_map.py  _check_all_slots.py  _check_pieces.py  _check_tile_geof.py  _compare_orig_gen.py  _count_pieces.py  _decode_pieces.py  _deep_emevd.py  _diff_651_bytes.py  _diff_geof_overview.py  _diff_geof_tile.py  _diff_saves_bytes.py  _diff_saves_slots.py  _diff_saves_triple.py  _dump_aeg099.py  _dump_around_empty_beacon.py  _dump_game_memory.py  _dump_tile_geom.py  (+89 more)
tools/fmg_patcher/: CMakeLists.txt  fmg_patcher.cpp
tracker/: CMakeLists.txt
tracker/src/: dllmain.cpp  tracker.cpp  tracker.hpp
(+122 files in other folders)
